<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarkApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Login">Iniciar sesión</string>
    <string name="Register">Registrar nuevo</string>
    <string name="input_name">Nombre</string>
    <string name="input_last_name">Apellido</string>
    <string name="input_nickname">Usuario</string>
    <string name="input_password">Contraseña</string>
    
    <string name="btn_register">Registrarse</string>
    <string name="btn_login">Listo</string>
    <string name="txt_no_user">Registrarse en MarkApp</string>
    <string name="btn_register_new">Crear una</string>
    
</resources>
